tests/integration/sampleSupportBundle/yamls/namespaced/cattle-dashboards/networking.k8s.io/v1/networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      meta.helm.sh/release-name: rancher-monitoring
      meta.helm.sh/release-namespace: cattle-monitoring-system
      objectset.rio.cattle.io/id: default-mcc-rancher-monitoring-cattle-fleet-local-system
    creationTimestamp: "2022-03-06T22:51:56Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
      objectset.rio.cattle.io/hash: a8c87f2d01731fdad3b988f675a7c8a7da10d382
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
            f:objectset.rio.cattle.io/id: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
            f:objectset.rio.cattle.io/hash: {}
        f:spec:
          f:egress: {}
          f:ingress: {}
          f:policyTypes: {}
      manager: fleetagent
      operation: Update
      time: "2022-03-06T22:51:56Z"
    name: default-allow-all
    namespace: cattle-dashboards
    resourceVersion: "4331"
    uid: ee07ea06-3fba-4f4b-86d2-21f58ba3321d
  spec:
    egress:
    - {}
    ingress:
    - {}
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: "14659074"
